Fix chatlist layout on mobiles

--- a/src/scss/partials/_chatlist.scss
+++ b/src/scss/partials/_chatlist.scss
@@ -78,9 +78,10 @@
 ul.chatlist {
   padding: 0 .5rem/*  .5rem */;
 
-  /* @include respond-to(handhelds) {
-    padding: 0 0 .5rem;
-  } */
+  @include respond-to(handhelds) {
+    // padding: 0 0 .5rem;
+    padding: 0;
+  }
 }
 
 .chatlist {
